--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,62 +7,76 @@ services:
       - "80:80"
     depends_on:
       - backend
-      - oracle-db
     networks:
       - prisoner-network
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    environment:
+      - REACT_APP_API_URL=http://localhost:80
 
   # Backend API Service
   backend:
     build:
       context: ./backend
     ports:
-      - "4000:4000"
+      - "3000:3000"
     depends_on:
       oracle-db:
         condition: service_healthy
     environment:
-      - PORT=4000
+      - PORT=3000
       - DB_HOST=oracle-db
       - DB_PORT=1521
       - DB_USER=system
       - DB_PASSWORD=ITC341ProjectPassword
       - DB_DATABASE=xepdb1
+      - NODE_ENV=development
+      - DEBUG=app:*
+      - CORS_ORIGIN=http://localhost:80
     volumes:
       - ./init-scripts:/app/init-scripts
+      - ./backend:/app
+      - /app/node_modules
     networks:
       - prisoner-network
     restart: on-failure
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   # Oracle DB - using publicly available Oracle XE image
   oracle-db:
-    image: gvenzl/oracle-xe:21-slim
+    image: container-registry.oracle.com/database/express:21.3.0-xe
     environment:
-      - ORACLE_PASSWORD=ITC341ProjectPassword
-      - ORACLE_DATABASE=XE
-      # Ensure data persistence
-      - ORACLE_CHARSET=AL32UTF8
-      - ORACLE_EDITION=xe
-      # For easier debugging
-      - ORACLE_DISABLE_ASYNCH_IO=true
+      - ORACLE_PWD=ITC341ProjectPassword
     ports:
-      - "1521:1521"
-      - "5500:5500"
+      - "1522:1521"
     volumes:
       - oracle-data:/opt/oracle/oradata
-      - oracle-setup:/opt/oracle/scripts/setup
-      - oracle-startup:/opt/oracle/scripts/startup
-      - ./init-scripts:/container-entrypoint-initdb.d
-    networks:
-      - prisoner-network
+      - ./init-scripts:/docker-entrypoint-initdb.d/setup
     healthcheck:
-      # Improved healthcheck to verify database is actually accessible
-      test: [ "CMD", "sqlplus", "-L", "system/ITC341ProjectPassword@//localhost:1521/xepdb1", "AS", "SYSDBA", "<<< 'SELECT 1 FROM DUAL;'" ]
-      interval: 30s
-      timeout: 15s
-      retries: 5
-      start_period: 60s
+      test: ["CMD", "sqlplus", "-L", "system/ITC341ProjectPassword@//localhost:1521/XE", "AS", "SYSDBA", "<<< 'SELECT 1 FROM DUAL;'"]
+      interval: 60s
+      timeout: 30s
+      retries: 10
+      start_period: 180s
     # Improve container shutdown to prevent data corruption
     stop_grace_period: 30s
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+    networks:
+      - prisoner-network
 
 networks:
   prisoner-network:
