--- a/backend/package.json
+++ b/backend/package.json
@@ -8,12 +8,12 @@
     "dev": "nodemon api/index.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "oracledb": "^5.5.0",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "oracledb": "^5.5.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
   }
-} 
+}
