--- a/frontend/nginx/nginx.conf
+++ b/frontend/nginx/nginx.conf
@@ -2,10 +2,42 @@ server {
     listen 80;
     server_name localhost;
 
+    # Main application
     location / {
         root /usr/share/nginx/html;
         index index.html index.htm;
         try_files $uri $uri/ /index.html;
+    }
+
+    # Proxy API requests to the backend service
+    location /api/ {
+        proxy_pass http://backend:3000/api/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+        
+        # Add debug headers
+        add_header X-Debug-Message "Proxying to backend" always;
+        
+        # Increase timeouts for development
+        proxy_connect_timeout 300;
+        proxy_send_timeout 300;
+        proxy_read_timeout 300;
+    }
+
+    # For caching static assets
+    location ~* \.(jpg|jpeg|png|gif|ico|css|js)$ {
+        root /usr/share/nginx/html;
+        expires 30d;
+        add_header Cache-Control "public, no-transform";
+    }
+
+    # Health check endpoint
+    location /health {
+        return 200 'healthy';
+        add_header Content-Type text/plain;
     }
 
     # Error pages
