Directory Cleanup Post Presentation

--- a/.env.example
+++ b/.env.example
@@ -3,11 +3,16 @@ DB_HOST=oracle-db
 DB_PORT=1521
 DB_USER=system
 DB_PASSWORD=YourStrongPassword123
-DB_DATABASE=XE
+DB_DATABASE=xepdb1
 
 # Backend API Configuration
-PORT=4000
+PORT=3000
 NODE_ENV=development
 
 # Frontend Configuration
-REACT_APP_API_URL=http://localhost:4000
+REACT_APP_API_URL=http://localhost:3000
+
+# Oracle Configuration
+ORACLE_HOME=/opt/oracle/instantclient
+LD_LIBRARY_PATH=/opt/oracle/instantclient
+PATH=$PATH:/opt/oracle/instantclient
